<resources>
    <integer name="register_span_start">18</integer>
    <integer name="register_span_end">24</integer>
    <integer name="login_span_start">18</integer>
    <integer name="login_span_end">23</integer>
    <string name="app_name">CrowdCounting</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="email_address">Alamat Email</string>
    <string name="password">Password</string>
    <string name="old_password">Password Lama</string>
    <string name="new_password">Password Baru</string>
    <string name="confirm_new_password">Konfirmasi Password Baru</string>
    <string name="password_not_matched">Password tidak sama</string>
    <string name="are_you_sure_to_logout">Apakah kamu yakin untuk logout?</string>
    <string name="are_you_sure_to_delete_item">Yakin mau hapus %s</string>
    <string name="save">Simpan</string>
    <string name="enter">Masuk</string>
    <string name="register">Daftar</string>
    <string name="dont_have_account">Belum punya akun? Daftar</string>
    <string name="already_have_account">Sudah punya akun? Masuk</string>

    <string name="message_success">Berhasil %s</string>
    <string name="message_create_success">Berhasil membuat %s</string>
    <string name="message_update_success">Berhasil update %s</string>
    <string name="message_delete_success">Berhasil hapus %s</string>
    <string name="exit">Keluar</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_confirmation">Hapus \"%s\" ?</string>
    <string name="empty_not_allowed_message">%s tidak boleh kosong</string>
    <string name="wrong_email_format">Format email salah</string>

    <string name="location_is">Lokasi: %s</string>
    <string name="area_width_is">Luas Area: %1$.1f m&lt;sup>&lt;small>2&lt;/small>&lt;/sup></string>
    <string name="max_crowd_is">Maksimal Kerumunan: %s</string>
    <string name="crowd_is">Kerumunan: %s</string>
    <string name="description">Deskripsi</string>
    <string name="description_is">Deskripsi:\n%s</string>
    <string name="there_is_problem_with_auth_please_relogin">Terdapat kesalahan authentikasi, harap logout dan login kembali</string>
    <string name="private_camera">Kamera Private</string>
    <string name="public_camera">Kamera Publik</string>
    <string name="camera">Kamera</string>
    <string name="camera_form">Form Kamera</string>
    <string name="camera_list">Daftar Kamera</string>
    <string name="camera_detail">Detail Kamera</string>
    <string name="camera_id_location">Kamera %s - %s</string>
    <string name="camera_id">Kamera %s</string>
    <string name="failed_load_camera_list">Gagal memuat daftar kamera</string>
    <string name="start_date">Tanggal Awal</string>
    <string name="end_date">Tanggal Akhir</string>
    <string name="filter">Filter</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="cancel">Batal</string>
    <string name="change_password">Ubah Password</string>
    <string name="my_camera">Kamera Saya</string>
    <string name="active">Active</string>
    <string name="public_accessible">Dapat Diakses Publik</string>
    <string name="item_is_empty">%s Kosong</string>
    <string name="camera_preview_image">Gambar Preview Kamera</string>
    <string name="rtsp_address">Rtsp Address</string>
    <string name="location">Lokasi</string>
    <string name="area">Luas Area</string>
    <string name="max_crowd_count">Maksimal Kerumunan</string>
    <string name="safe_crowd_status">Kerumunan Aman</string>
    <string name="dangerous_crowd_status">Kerumunan Berbahaya</string>
    <string name="loading">Memuat…</string>
    <string name="no_update">Tidak ada update</string>

    <string name="nav_label_home">Beranda</string>
    <string name="nav_label_statistic">Statistik</string>
    <string name="nav_label_profile">Profil</string>
    <string name="nav_label_cart">Keranjang</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>