<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/option_home"
        android:enabled="true"
        android:icon="@drawable/nav_icon_selector_home"
        android:title="@string/nav_label_home"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/option_statistic"
        android:enabled="true"
        android:icon="@drawable/nav_icon_selector_statistic"
        android:title="@string/nav_label_statistic"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/option_profile"
        android:enabled="true"
        android:icon="@drawable/nav_icon_selector_profile"
        android:title="@string/nav_label_profile"
        app:showAsAction="ifRoom"/>
</menu>