<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/padding_10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".camera.CameraFormFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_camera_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/large_image_size_4"
            android:layout_margin="@dimen/margin_8dp"
            android:background="@drawable/bg_box_outlined_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_upload_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_preview_image"
            android:textColor="@color/colorBlackLight_D1D1CF"
            app:drawableTopCompat="@drawable/ic_upload_image"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="@id/iv_camera_image"
            app:layout_constraintEnd_toEndOf="@id/iv_camera_image"
            app:layout_constraintTop_toTopOf="@id/iv_camera_image"
            app:layout_constraintBottom_toBottomOf="@id/iv_camera_image"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_rtsp_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp"
            style="@style/Material.TextInputLayout.OutlinedBox"
            android:hint="@string/rtsp_address"
            app:errorEnabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_camera_image">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_rtsp_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp"
            style="@style/Material.TextInputLayout.OutlinedBox"
            android:hint="@string/location"
            app:errorEnabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ti_rtsp_address">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_area"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp"
            style="@style/Material.TextInputLayout.OutlinedBox"
            android:hint="@string/area"
            app:errorEnabled="false"
            app:layout_constraintHorizontal_weight="0.6"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ti_max_crowd"
            app:layout_constraintTop_toBottomOf="@id/ti_location">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_max_crowd"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp"
            style="@style/Material.TextInputLayout.OutlinedBox"
            android:hint="@string/max_crowd_count"
            app:errorEnabled="false"
            app:layout_constraintHorizontal_weight="0.4"
            app:layout_constraintStart_toEndOf="@id/ti_area"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ti_location">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_max_crowd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp"
            style="@style/Material.TextInputLayout.OutlinedBox"
            android:hint="@string/description"
            app:errorEnabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ti_area">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:maxLines="4"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active"
            android:layout_margin="@dimen/margin_8dp"
            app:switchPadding="@dimen/padding_10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ti_desc"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_public"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/public_accessible"
            android:layout_margin="@dimen/margin_8dp"
            app:switchPadding="@dimen/padding_10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sw_active"/>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle.Medium.ContainedButtonYellow"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginHorizontal="@dimen/margin_8dp"
            android:text="@string/save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sw_public"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>