<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="@dimen/dimen_300dp"
    android:minHeight="@dimen/dimen_200dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_box_contaied_white"
    android:padding="@dimen/margin_20dp">

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/BaseTextViewStyle.Title"
        android:text="@string/delete_confirmation"
        android:layout_marginTop="@dimen/margin_26dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_yes"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btn_yes"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        style="@style/ButtonStyle.Small"
        android:text="@string/yes"
        android:textAllCaps="true"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginHorizontal="@dimen/margin_10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_no"
        app:layout_constraintTop_toBottomOf="@+id/tv_message"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btn_no"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        style="@style/ButtonStyle.Small"
        android:text="@string/no"
        android:textAllCaps="true"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginHorizontal="@dimen/margin_10dp"
        app:layout_constraintStart_toEndOf="@+id/btn_yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_message"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>