<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".statistic.StatisticFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_16dp">

        <LinearLayout
            android:id="@+id/ll_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/padding_16dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginHorizontal="@dimen/margin_6dp"
            android:background="@drawable/bg_box_outlined_yellow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                style="@style/Material.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:hint="@string/camera">
                <AutoCompleteTextView
                    android:id="@+id/ac_camera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/start_date"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_calendar"
                app:errorEnabled="false"
                app:boxCornerRadiusTopStart="@dimen/dimen_15dp"
                app:boxCornerRadiusTopEnd="@dimen/dimen_15dp"
                app:boxCornerRadiusBottomStart="@dimen/dimen_15dp"
                app:boxCornerRadiusBottomEnd="@dimen/dimen_15dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/end_date"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_calendar"
                app:errorEnabled="false"
                app:boxCornerRadiusTopStart="@dimen/dimen_15dp"
                app:boxCornerRadiusTopEnd="@dimen/dimen_15dp"
                app:boxCornerRadiusBottomStart="@dimen/dimen_15dp"
                app:boxCornerRadiusBottomEnd="@dimen/dimen_15dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_end_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BaseTextViewStyle.SubTitle"
                android:text="@string/filter"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/margin_10dp"
                android:layout_marginEnd="@dimen/margin_10dp"/>

        </LinearLayout>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/lc_chart"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="@dimen/margin_10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_container"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>